; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_get_typelib_key.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_get_typelib_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_typelib_key.TypelibW = internal constant [9 x i8] c"Typelib\\\00", align 1
@get_typelib_key.VersionFormatW = internal constant [7 x i8] c"\\%x.%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32, i32, i8*)* @get_typelib_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_typelib_key(i32 %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = call i32 @memcpy(i8* %9, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @get_typelib_key.TypelibW, i64 0, i64 0), i32 9)
  %11 = load i32, i32* %5, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @strlenW(i8* %13)
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i8, i8* %12, i64 %15
  %17 = call i32 @StringFromGUID2(i32 %11, i8* %16, i32 40)
  %18 = load i8*, i8** %8, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @strlenW(i8* %19)
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %18, i64 %21
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @sprintfW(i8* %22, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @get_typelib_key.VersionFormatW, i64 0, i64 0), i32 %23, i32 %24)
  %26 = load i8*, i8** %8, align 8
  ret i8* %26
}

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @StringFromGUID2(i32, i8*, i32) #1

declare dso_local i32 @strlenW(i8*) #1

declare dso_local i32 @sprintfW(i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
